--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,6 @@ services:
     - target: 5000
       published: 5000
       protocol: tcp
-    enviornment:
+    environment:
       DATABASE_URI: ${DATABASE_URI}
       SECRET_KEY: ${SECRET_KEY}
