--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,5 +8,5 @@ services:
       published: 5000
       protocol: tcp
     environment:
-      DATABASE_URI: ${DATABASE_URI}
-      SECRET_KEY: ${SECRET_KEY}
+      DATABASE_URI: sqlite:///data.db
+      SECRET_KEY: iejfpojweoep
