--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.8'
 services:
   flask-app:
     environment:
-      DATABASE_URI: ${DATABASE_URI}
-      SECRET_KEY: ${SECRET_KEY}
+      DATABASE_URI: "${DATABASE_URI}"
+      SECRET_KEY: "${SECRET_KEY}"
     image: rwright1992/flask-test-app:latest
     build: ./
     ports:
