--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   flask-app:
     environment:
-      DATABASE_URI:mysqlite:///data.db
+    - DATABASE_URI:mysqlite:///data.db
       MY_SECRET_KEY:shhhhhhh
     image: rwright1992/flask-test-app:latest
     build: ./
